# CodeAnalysisService

./: .env.example  .gitignore  Dockerfile  alembic.ini  noxfile.py  pyproject.toml
alembic/: env.py
alembic/versions/: b71446a262ce_create_jobs_table.py
app/: __init__.py  main.py
app/api/: __init__.py  job.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  database.py  schemas.py
app/services/: __init__.py  repository.py
tests/: conftest.py  test_api.py  test_repository.py
